--- a/intex.html
+++ b/intex.html
@@ -10,6 +10,7 @@
         <a href="work2/index.html">work2 简单网页任务</a><br>
         <a href="work3/index.html">work3 js基本语法</a><br>
         <a href="work5/index.html">work5 js循环语句</a><br>
+        <a href="work6/index.html">work6 阶乘法计算圆周率</a><br>
         持续更新中。。。。。。
     </body>
 </html>
