--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <a href="work3/index.html">work3 js基本语法</a><br>
         <a href="work5/index.html">work5 js循环语句</a><br>
         <a href="work6/index.html">work6 阶乘法计算圆周率</a><br>
+        <a href="work7/index.html">work7 冒泡排序和插入排序</a><br>
         持续更新中。。。。。。
     </body>
 </html>
