--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <a href="work1/index.html">work1 开发环境</a><br>
         <a href="work2/index.html">work2 简单网页任务</a><br>
         <a href="work3/index.html">work3 js基本语法</a><br>
+        <a href="work4/index.html">work4 js流程控制</a><br>
         <a href="work5/index.html">work5 js循环语句</a><br>
         <a href="work6/index.html">work6 阶乘法计算圆周率</a><br>
         <a href="work7/index.html">work7 冒泡排序和插入排序</a><br>
