--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="work6/index.html">work6 阶乘法计算圆周率</a><br>
         <a href="work7/index.html">work7 冒泡排序和插入排序</a><br>
         <a href="work8/index.html">work8 简易计算器</a><br>
-        <a href="work9/insex.html">work9 斐波那契数列第N项值的程序</a><br>
+        <a href="work9/insex.html">work9 三级联动</a><br>
         持续更新中。。。。。。
     </body>
 </html>
