--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="work7/index.html">work7 冒泡排序和插入排序</a><br>
         <a href="work8/index.html">work8 简易计算器</a><br>
         <a href="work9/insex.html">work9 三级联动</a><br>
+        <a href="work10/index.html">work10 猴子选大王</a><br>
         持续更新中。。。。。。
     </body>
 </html>
