--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="work8/index.html">work8 简易计算器</a><br>
         <a href="work9/insex.html">work9 三级联动</a><br>
         <a href="work10/index.html">work10 猴子选大王</a><br>
+        <a href="work12/index.html">work12 年历</a><br>
         持续更新中。。。。。。
     </body>
 </html>
