--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <a href="work9/insex.html">work9 三级联动</a><br>
         <a href="work10/index.html">work10 猴子选大王</a><br>
         <a href="work12/index.html">work12 年历</a><br>
+        <a href="work12/index.html">work12-1 万年历</a><br>
+        <a href="work13/index.html">work13 表单生成器</a><br>
         持续更新中。。。。。。
     </body>
 </html>
