--- a/work20-1/index1.html
+++ b/work20-1/index1.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>严乐乐的左移与右移</title>
-    <script src="../juqery.js"></script>
+    <script src="../jquery.js"></script>
     <link rel="stylesheet" href="index1.css">
 </head>
 <body>
