--- a/work20/index.html
+++ b/work20/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>严乐乐的折叠菜单</title>
-    <script src="..jquery.js"></script>
+    <script src="../jquery.js"></script>
     <link rel="stylesheet" href="index.css">
 </head>
 
