--- a/index.html
+++ b/index.html
@@ -25,11 +25,16 @@
         <a href="work15/index.html">work15 购物车</a><br>
         <a href="work16/index.html">work16 放大镜</a><br>
         <a href="work16-1/index1.html">work16-1 小球乱跑</a><br>
-        <a href="work17/index.html">work17 表单验证</a>
+        <a href="work17/index.html">work17 表单验证</a><br>
         <a href="work18/index.html">work18 Ajax无刷新提交评论</a><br>        
         <a href="work18-1/index1.html">work18-1 ajax无刷新分页查看评论</a><br> 
         <a href="work19/index.html">work19 简易WebSocket聊天室</a><br> 
         <a href="work19-1/index1.html">work19-1 进度条上传</a><br> 
+        <a href="work20/index.html">work20 折叠菜单</a><br>
+        <a href="work20-1/index1.html">work20-1 左移与右移</a><br>
+        <a href="work21/index.html">work21 无缝轮播图</a><br>
+        <a href="work21-1/index1.html">work21-1 jQuery ajax无刷新提交评论</a><br>
+        
         持续更新中。。。。。。
     </body>
 </html>
